--- a/part1.html
+++ b/part1.html
@@ -65,6 +65,9 @@
         player.setBounce(0.2);
         player.setCollideWorldBounds(true);
 
+        // set body property
+        // player.body.setGravityY(300)
+
         // create player animations
         this.anims.create({
             key: 'left',
@@ -83,6 +86,10 @@
             frameRate: 10,
             repeat: -1
         });
+
+        // add collider object between player and platforms
+        this.physics.add.collider(player, platforms);
+
     }
 
     function update ()
