--- a/part1.html
+++ b/part1.html
@@ -48,6 +48,7 @@
 
     let platforms;
     let player;
+    let cursors;
 
     function create ()
     {
@@ -66,7 +67,7 @@
         player.setCollideWorldBounds(true);
 
         // set body property
-        // player.body.setGravityY(300)
+        player.body.setGravityY(900)
 
         // create player animations
         this.anims.create({
@@ -90,10 +91,29 @@
         // add collider object between player and platforms
         this.physics.add.collider(player, platforms);
 
+        // use built-in keyboard manager
+        cursors = this.input.keyboard.createCursorKeys();
+
     }
 
     function update ()
     {
+        if (cursors.left.isDown) {
+            player.setVelocityX(-160);
+            player.anims.play('left', true);
+        }
+        else if (cursors.right.isDown) {
+            player.setVelocityX(160);
+            player.anims.play('right', true);
+        }
+        else {
+            player.setVelocityX(0);
+            player.anims.play('turn');
+        }
+
+        if (cursors.up.isDown && player.body.touching.down) {
+            player.setVelocityY(-700);
+        }
     }
 
 </script>
