when collect all stars, add new stars + bomb enemy

--- a/part1.html
+++ b/part1.html
@@ -54,6 +54,9 @@
     let score = 0;
     let scoreText;
 
+    let bombs;
+    let gameOver = false;
+
     function create ()
     {
         this.add.image(400, 300, 'sky');
@@ -123,6 +126,10 @@
         // By not specifying which font we'll actually use the Phaser default, which is Courier.
         scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
 
+        bombs = this.physics.add.group();
+        this.physics.add.collider(bombs, platforms);
+        this.physics.add.collider(player, bombs, hitBomb, null, this);
+
     }
 
     function collectStar (player, star) {
@@ -130,10 +137,36 @@
 
         // increase score
         score += 10;
-        
+
         // update scoreText
         scoreText.setText('Score: ' + score);
 
+        // count how many stars are left -> if all stars collected, create new stars, create bomb
+        if (stars.countActive(true) === 0) {
+
+            // create new stars
+            stars.children.iterate(function (child) {
+                child.enableBody(true, child.x, 0, true, true)
+            });
+
+            // set bomb starting x coordinate on opposite half from player
+            let x = (player.x < 400) ? Phaser.Math.Between(400, 800) : Phaser.Math.Between(0, 400);
+
+            // create bomb and set behavior
+            let bomb = bombs.create(x, 16, 'bomb');
+            bomb.setBounce(1);
+            bomb.setCollideWorldBounds(true);
+            bomb.setVelocity(Phaser.Math.Between(-200, 200), 20)
+
+        }
+
+    }
+
+    function hitBomb (player, bomb) {
+        this.physics.pause();
+        player.setTint(0xff0000);
+        player.anims.play('turn');
+        gameOver = true;
     }
 
     function update ()
