--- a/part1.html
+++ b/part1.html
@@ -7,6 +7,10 @@
     <style type="text/css">
         body {
             margin: 0;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     </style>
 </head>
